[package]
name = "pcm4104"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Driver for the Texas Instruments PCM4104 audio DAC"
repository = "https://github.com/sourcebox/pcm4104-rs"
license = "MIT"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["driver", "embedded-hal-async", "spi", "audio"]

[dependencies]
embedded-hal-async = "1.0.0"

[lints.rust]
missing_docs = "warn"
